# aqinow

./: .env.backend.example  .env.frontend.example  .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: backend_pre_start.py  pyproject.toml
backend/app/: logging.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: e54529e44c30_create_table_user.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/auth/: router.py
backend/app/api/v1/auth/schemas/: auth_request.py  auth_response.py
backend/app/api/v1/auth/services/: auth_service.py
backend/app/api/v1/user/: router.py
backend/app/api/v1/user/schemas/: user_request.py  user_response.py
backend/app/api/v1/user/services/: check_user_service.py  create_user_service.py  delete_user_service.py
backend/app/constants/: pagination_constant.py  token_constant.py
backend/app/core/: config.py  db.py  exception.py  response.py  security.py
backend/app/enums/: user_enum.py
backend/app/message/: error.py  success.py
backend/app/models/: base_model.py  user.py
backend/app/schemas/: base_schema.py  error_schema.py  sensor_schema.py
backend/app/services/: pagination_service.py  sensor_service.py
backend/app/utils/: common_util.py
frontend/: next-auth.d.ts  next-global.d.ts  openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/components/: sidebar.tsx
frontend/src/configs/: firebase.config.ts  (+1 more)
(+28 files in other folders)
